[package]
name = "fastwfc-sys"
version = "0.1.0"
authors = ["ricky han <github@rickyhan.com>"]
edition = "2018"
build = "build.rs"
doc = true
repository = "https://github.com/rickyhan/fastwfc-rs"
description = "Rust bindings to libfastwfc"
license = "MIT"

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
cmake = "0.1"
cc = "1.0.42"
