[package]
name = "fastwfc"
version = "0.1.0"
authors = ["ricky han <github@rickyhan.com>"]
edition = "2018"
doc = true
repository = "https://github.com/rickyhan/fastwfc-rs"
description = "Rust bindings to libfastwfc"
license = "MIT"

[dependencies]
fastwfc-sys = { path = "../fastwfc-sys" }
image = "0.22.1"
